{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 3,
  "lineage": "0af3a663-49dd-9d12-0d2a-cb9701ac6d91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:942359818692:security-group/sg-034a3715d28e37041",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-034a3715d28e37041",
            "ingress": [],
            "name": "prod-sg",
            "name_prefix": "",
            "owner_id": "942359818692",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09053dac5287f538b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942359818692",
            "id": "sg-034a3715d28e37041",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:942359818692:security-group-rule/sgr-062fc562f5fc35e44",
            "cidr_ipv4": "3.16.132.220/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-062fc562f5fc35e44",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-034a3715d28e37041",
            "security_group_rule_id": "sgr-062fc562f5fc35e44",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942359818692",
            "id": "sgr-062fc562f5fc35e44",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.prod",
            "data.terraform_remote_state.eip"
          ]
        }
      ]
    }
  ]
}